[package]
authors = ["Without Boats <woboats@gmail.com>"]
name = "heck"
version = "0.3.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "heck is a case conversion library."
homepage = "https://github.com/withoutboats/heck"
repository = "https://github.com/withoutboats/heck"
documentation = "https://docs.rs/heck"
keywords = ["string", "case", "camel", "snake", "unicode"]
readme = "README.md"

[dependencies]
unicode-segmentation = { version = "1.2.0", features = ["no_std"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
